test time of http requests

--- a/Project4_Mine/test_time.ipynb
+++ b/Project4_Mine/test_time.ipynb
@@ -2,51 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "193d0b1b",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import aiohttp\n",
     "import time\n",
     "import asyncio\n",
-    "import requests\n"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "49574cd2",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = \"http://127.0.0.1:5000\"\n",
+    "start = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 5.592802047729492\n"
+      "Time: 2.4495887756347656\n"
      ]
     }
    ],
    "source": [
-    "URL = \"http://127.0.0.1:8000\"\n",
-    "start = time.time()\n",
     "results = []\n",
-    "for i in range(1000):\n",
+    "for i in range(500):\n",
     "    results.append(requests.post(URL).content)\n",
     "print(f\"Time: {time.time() - start}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5b2f7ee1",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "URLS = []\n",
-    "for i in range(1000):\n",
-    "    URLS.append(\"http://127.0.0.1:8000\")\n",
-    "\n",
+    "for i in range(500):\n",
+    "    URLS.append(\"http://127.0.0.1:5000\")\n",
     "async def test(URL):\n",
     "    async with aiohttp.ClientSession() as session:\n",
     "        async with session.post(URL) as resp:\n",
@@ -55,43 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "44dff3ed",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 0.516855001449585\n"
+      "Time: 1.6060764789581299\n"
      ]
     }
    ],
    "source": [
     "start = time.time()\n",
     "loop = asyncio.get_event_loop()\n",
-    "results = await asyncio.gather(*[loop.create_task(test(URL)) for URL in URLS], return_exceptions = True)\n",
-    "print(f\"Time: {time.time()-start}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a9a78a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "URL = \"http://127.0.0.1:8000\"\n",
-    "start = time.time()\n",
-    "results = []\n",
-    "for i in range(1000):\n",
-    "    results.append"
+    "results = await asyncio.gather(*[loop.create_task(test(URL)) for URL in URLS], return_exceptions= True)\n",
+    "print(f\"Time: {time.time() - start}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -105,9 +94,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
